1. Push latest changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* Post Detail */
 .detail p {
     margin: 1rem 0;
